<resources>
    <string name="app_name">Lelang Online</string>
    <string name="welcome">"Selamat Datang, "</string>
    <string name="action_register">Daftar sekarang</string>
    <string name="action_register_short">Daftar</string>
    <string name="action_sign_in">Masuk</string>
    <string name="action_sign_out">Keluar</string>
    <string name="action_bid">Pasang</string>
    <string name="action_post">Simpan</string>
    <string name="action_update">Ubah</string>
    <string name="action_remove">Hapus</string>
    <string name="action_uploading">Sedang mengupload</string>
    <string name="form_invalid_username">Nama tidak valid</string>
    <string name="form_invalid_username_empty">Nama tidak boleh kosong</string>
    <string name="form_invalid_email">Email tidak valid</string>
    <string name="form_invalid_email_empty">Email tidak boleh kosong</string>
    <string name="form_invalid_phone">No handphone tidak valid</string>
    <string name="form_invalid_phone_empty">No handphone tidak boleh kosong</string>
    <string name="form_invalid_password">Password minimal 8 karakter</string>
    <string name="form_invalid_item_name">Nama barang tidak boleh kosong</string>
    <string name="form_invalid_item_cat">Kategori barang tidak boleh kosong</string>
    <string name="form_invalid_item_val">Harga barang tidak boleh kosong</string>
    <string name="form_invalid_item_desc">Deskripsi barang tidak boleh kosong</string>
    <string name="form_invalid_auction_name">Nama barang tidak boleh kosong</string>
    <string name="form_invalid_auction_init_price">Harga awal tidak boleh kosong</string>
    <string name="form_invalid_auction_limit_price">Harga maksimal tidak boleh kosong</string>
    <string name="form_invalid_auction_time_start">Waktu mulai lelang tidak boleh kosong</string>
    <string name="form_invalid_auction_time_end">Waktu berakhir lelang tidak boleh kosong</string>
    <string name="title_name">Nama Lengkap</string>
    <string name="title_email">Email</string>
    <string name="title_password">Password</string>
    <string name="login_failed">"Login gagal"</string>
    <string name="register_failed">"Register gagal"</string>
    <string name="title_home">Home</string>
    <string name="title_items">List Barang</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_account">Profil</string>
    <string name="search_title">Cari barang</string>
    <string name="alert_agree">@android:string/ok</string>
    <string name="alert_disagree">@android:string/cancel</string>
    <string name="alert_confirm_sign_out">Apakah Anda yakin ingin keluar?</string>
    <string name="alert_conn_title">Koneksi Gagal</string>
    <string name="alert_conn_desc">Terjadi kesalahan pada koneksi atau server.</string>
    <string name="alert_post_success_title">Upload Selesai</string>
    <string name="alert_post_success_item_0_desc">Barang baru anda telah disimpan. (Error Gambar)</string>
    <string name="alert_post_success_item_1_desc">Barang baru anda telah disimpan.</string>
    <string name="alert_post_success_auction_desc">Jadwal lelang untuk barang anda telah disimpan.</string>
    <string name="alert_post_success_bid_desc">Penawaran anda telah disimpan.</string>
    <string name="alert_update_success_title">Pembaharuan Berhasil</string>
    <string name="alert_update_success_account_0_desc">Perubahan terhadap akun anda telah disimpan. (Error Gambar)</string>
    <string name="alert_update_success_account_1_desc">Perubahan terhadap akun anda telah disimpan.</string>
    <string name="alert_update_success_item_0_desc">Perubahan terhadap barang anda telah disimpan. (Error Gambar)</string>
    <string name="alert_update_success_item_1_desc">Perubahan terhadap barang anda telah disimpan.</string>
    <string name="alert_remove_confirm_title">Konfirmasi Hapus</string>
    <string name="alert_remove_confirm_desc">Apakah anda yakin ingin menghapus barang ini?</string>
    <string name="alert_remove_success_title">Hapus Berhasil</string>
    <string name="alert_remove_success_desc">Barang anda telah dihapus dari daftar barang.</string>
    <string name="alert_get_item_names_title">Tidak Ada Barang</string>
    <string name="alert_get_item_names_desc">Anda tidak memiliki barang untuk dilelang.</string>
    <string name="alert_pass_invalid_title">Password Tidak Valid</string>
    <string name="alert_pass_invalid_desc">Password yang anda masukkan salah. Mohon masukkan kembali password anda dengan benar.</string>
    <string name="alert_bid_invalid_title">Penawaran Tidak Valid</string>
    <string name="alert_bid_invalid_0_desc">Jumlah penawaran Anda harus lebih besar atau sama dengan harga pembukaan.</string>
    <string name="alert_bid_invalid_1_desc">Jumlah penawaran Anda harus lebih besar dari penawaran terakhir.</string>
    <string name="alert_bid_invalid_2_desc">Jumlah penawaran Anda harus lebih kecil atau sama dengan harga batas.</string>
    <string name="card_auction_stop">Lelang telah berakhir</string>
    <string name="card_auction_end">Lelang berakhir dalam:</string>
    <string name="card_auction_start">Lelang dimulai dalam:</string>
    <string name="card_details_bidder">Penawar</string>
    <string name="card_details_stop">Lelang telah berakhir</string>
    <string name="card_details_end">Berakhir dalam:</string>
    <string name="card_details_start">Dimulai dalam:</string>
    <string name="card_details_price">Mulai dari</string>
    <string name="card_details_desc">Deskripsi Barang</string>
    <string name="account_sub_unverified">Akun belum diverifikasi</string>
    <string name="account_sub_verified">Akun terverifikasi</string>
    <string name="account_edit_title">Perbaharui Akun</string>
    <string name="account_trans_title">Transaksi</string>
    <string name="account_trans_waiting_title">Menunggu Pembayaran</string>
    <string name="account_trans_waiting_subtitle">Semua transaksi yang belum dibayar</string>
    <string name="account_trans_list_title">Daftar Transaksi</string>
    <string name="account_trans_list_subtitle">Semua transaksi yang sudah dibayar</string>
    <string name="account_trans_complain_title">Komplain Sebagai Pembeli</string>
    <string name="account_trans_complain_subtitle">Lihat status komplain</string>
    <string name="account_item_title">Barang</string>
    <string name="account_item_post_title">Barang Baru</string>
    <string name="account_item_post_subtitle">Buat barang untuk dilelang</string>
    <string name="account_item_list_title">Daftar Barang</string>
    <string name="account_item_list_subtitle">Semua barang yang sudah dibuat</string>
    <string name="account_item_edit_title">Edit Barang</string>
    <string name="account_item_remove_title">Hapus Barang</string>
    <string name="account_auction_title">Lelang</string>
    <string name="account_auction_post_title">Lelang Baru</string>
    <string name="account_auction_post_subtitle">Buat jadwal lelang barang</string>
    <string name="account_auction_list_title">Daftar Lelang</string>
    <string name="account_auction_list_subtitle">Semua lelang yang sudah dibuat</string>
    <string name="account_acc_title">Akun</string>
    <string name="account_acc_settings_title">Pengaturan</string>
    <string name="account_acc_logout_title">Keluar</string>
    <string name="account_post_name_title">Nama Anda</string>
    <string name="account_post_name_hint">Masukkan nama anda</string>
    <string name="account_post_email_title">Email Anda</string>
    <string name="account_post_email_hint">Masukkan email anda</string>
    <string name="account_post_phone_title">No Handphone Anda</string>
    <string name="account_post_phone_hint">Masukkan no handphone anda</string>
    <string name="account_post_pass_old_title">Password Anda</string>
    <string name="account_post_pass_old_hint">Masukkan password anda</string>
    <string name="account_post_pass_change">Ganti Password</string>
    <string name="account_post_pass_new_hint">Masukkan password baru anda</string>
    <string name="account_post_pass_conf_hint">Konfirmasi password baru anda</string>
    <string name="account_post_image_title">Foto Anda</string>
    <string name="account_post_image_hint">Tambahkan foto anda</string>
    <string name="item_post_name_title">Nama Barang</string>
    <string name="item_post_name_hint">Masukkan nama barang</string>
    <string name="item_post_desc_title">Deskripsi Barang</string>
    <string name="item_post_desc_hint">Masukkan deskripsi barang</string>
    <string name="item_post_cat_title">Kategori Barang</string>
    <string name="item_post_cat_hint">Masukkan kategori barang</string>
    <string name="item_post_val_title">Nilai Barang</string>
    <string name="item_post_val_hint">Masukkan nilai barang</string>
    <string name="item_post_img_title">Foto Barang</string>
    <string name="item_post_img_hint">Tambahkan foto barang</string>
    <string name="auction_bid_amount_title">Penawaran Anda</string>
    <string name="auction_bid_amount_hint">Masukkan jumlah penawaran anda</string>
    <string name="auction_bid_amount_hint_locked">Daftar atau masuk terlebih dahulu</string>
    <string name="auction_bid_amount_hint_stop">Lelang belum dimulai atau telah berakhir</string>
    <string name="auction_bid_amount_hint_owner">Anda tidak dapat melakukan penawaran</string>
    <string name="auction_post_name_title">Nama Barang</string>
    <string name="auction_post_name_hint">Pilih Barang Anda</string>
    <string name="auction_post_value_title">Nilai Barang</string>
    <string name="auction_post_init_price_title">Harga Awal</string>
    <string name="auction_post_init_price_hint">Masukkan besar tawaran awal</string>
    <string name="auction_post_max_price_title">Harga Maksimal</string>
    <string name="auction_post_max_price_hint">Masukkan besar tawaran maksimal</string>
    <string name="auction_post_start_time_title">Waktu Mulai Lelang</string>
    <string name="auction_post_start_date_hint">Tentukan tanggal mulai lelang</string>
    <string name="auction_post_start_time_hint">Tentukan jam mulai lelang</string>
    <string name="auction_post_end_time_title">Waktu Berakhir Lelang</string>
    <string name="auction_post_end_date_hint">Tentukan tanggal berakhir lelang</string>
    <string name="auction_post_end_time_hint">Tentukan jam berakhir lelang</string>
</resources>
