<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/activity_add_auction_placeholder" />

    <ScrollView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.auctions.add.AuctionsAddActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/mp_m"
            android:paddingVertical="@dimen/mp_s">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/mp_s"
                app:cardCornerRadius="@dimen/card_cornerRadius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/mp_m">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/mp_s"
                        android:labelFor="@id/name"
                        android:text="@string/auction_post_name_title"
                        android:textColor="@color/grayDarkTextColor"
                        android:textSize="@dimen/material_text_title" />

                    <Spinner
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="@dimen/mp_m"
                        android:prompt="@string/auction_post_name_hint"
                        android:spinnerMode="dialog"
                        android:textColor="@color/grayTextColor"
                        android:textSize="@dimen/material_text_subhead" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/mp_s"
                app:cardCornerRadius="@dimen/card_cornerRadius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/mp_m">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/mp_s"
                        android:labelFor="@id/itemValue"
                        android:text="@string/auction_post_value_title"
                        android:textColor="@color/grayDarkTextColor"
                        android:textSize="@dimen/material_text_title" />

                    <TextView
                        android:id="@+id/itemValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="@dimen/mp_s"
                        android:textColor="@color/grayTextColor"
                        android:textSize="@dimen/material_text_subhead" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/mp_s"
                app:cardCornerRadius="@dimen/card_cornerRadius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/mp_m">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/mp_s"
                        android:labelFor="@id/init_price"
                        android:text="@string/auction_post_init_price_title"
                        android:textColor="@color/grayDarkTextColor"
                        android:textSize="@dimen/material_text_title" />

                    <me.abhinay.input.CurrencyEditText
                        android:id="@+id/init_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/auction_post_init_price_hint"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:maxLength="15"
                        android:textColor="@color/grayTextColor"
                        android:textSize="@dimen/material_text_subhead" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/mp_s"
                app:cardCornerRadius="@dimen/card_cornerRadius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/mp_m">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/mp_s"
                        android:labelFor="@id/limit_price"
                        android:text="@string/auction_post_max_price_title"
                        android:textColor="@color/grayDarkTextColor"
                        android:textSize="@dimen/material_text_title" />

                    <me.abhinay.input.CurrencyEditText
                        android:id="@+id/limit_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/auction_post_max_price_hint"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:maxLength="15"
                        android:textColor="@color/grayTextColor"
                        android:textSize="@dimen/material_text_subhead" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/mp_s"
                app:cardCornerRadius="@dimen/card_cornerRadius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/mp_m">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/mp_s"
                        android:labelFor="@id/start_time"
                        android:text="@string/auction_post_start_time_title"
                        android:textColor="@color/grayDarkTextColor"
                        android:textSize="@dimen/material_text_title" />

                    <EditText
                        android:id="@+id/start_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/auction_post_start_date_hint"
                        android:importantForAutofill="no"
                        android:inputType="date"
                        android:maxLength="50"
                        android:textColor="@color/grayTextColor"
                        android:textSize="@dimen/material_text_subhead" />

                    <EditText
                        android:id="@+id/start_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/auction_post_start_time_hint"
                        android:importantForAutofill="no"
                        android:inputType="time"
                        android:maxLength="50"
                        android:textColor="@color/grayTextColor"
                        android:textSize="@dimen/material_text_subhead" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/mp_s"
                app:cardCornerRadius="@dimen/card_cornerRadius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/mp_m">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/mp_s"
                        android:labelFor="@id/start_time"
                        android:text="@string/auction_post_end_time_title"
                        android:textColor="@color/grayDarkTextColor"
                        android:textSize="@dimen/material_text_title" />

                    <EditText
                        android:id="@+id/end_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/auction_post_end_date_hint"
                        android:importantForAutofill="no"
                        android:inputType="date"
                        android:maxLength="50"
                        android:textColor="@color/grayTextColor"
                        android:textSize="@dimen/material_text_subhead" />

                    <EditText
                        android:id="@+id/end_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/auction_post_end_time_hint"
                        android:importantForAutofill="no"
                        android:inputType="time"
                        android:maxLength="50"
                        android:textColor="@color/grayTextColor"
                        android:textSize="@dimen/material_text_subhead" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.4"
        android:background="@color/grayDarkColor"
        android:visibility="gone" />

    <androidx.cardview.widget.CardView
        android:id="@+id/progressCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/mp_m"
        android:visibility="gone"
        app:cardCornerRadius="@dimen/card_cornerRadius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/mp_m">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/mp_s"
                android:labelFor="@id/description"
                android:text="@string/action_uploading"
                android:textColor="@color/grayDarkTextColor"
                android:textSize="@dimen/material_text_title" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/mp_s"
                android:indeterminate="true" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>